sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:19: error: type mismatch;
 found   : Boolean(true)
 required: String
        swapped+=true
                 ^